--- a/postgres-pod.yml
+++ b/postgres-pod.yml
@@ -1,8 +1,8 @@
 apiVersion: v1
-type: Pod
+kind: Pod
 metadata:
         name: postgres-pod
-        lables:
+        labels:
                 name: postgres-pod
                 app: testing-k8s-vote-app
 
