--- a/postgres-service.yml
+++ b/postgres-service.yml
@@ -1,8 +1,8 @@
 apiVersion: v1
-type: Service
+kind: Service
 metadata:
         name: db
-        lables:
+        labels:
                 name: db-service
                 app: testing-k8s-vote-app
 
