--- a/redis-pod.yml
+++ b/redis-pod.yml
@@ -1,8 +1,8 @@
 apiVersion: v1
-type: Pod
+kind: Pod
 metadata:
         name: redis-pod
-        lables:
+        labels:
                 name: redis-pod
                 app: testing-k8s-vote-app
 
