--- a/redis-service.yml
+++ b/redis-service.yml
@@ -1,8 +1,8 @@
 apiVersion: v1
-type: Service
+kind: Service
 metadata:
         name: redis
-        lables:
+        labels:
                 name: redis-service
                 app: testing-k8s-vote-app
 
