--- a/result-app-service.yml
+++ b/result-app-service.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
-type: Service
+kind: Service
 metadata:
         name: result-app-service
-        lables:
+        labels:
                 name: result-app-service
                 app: testing-k8s-vote-app
 
 spec:
-        type: NodePort
+        type: LoadBalancer
         ports:
                 - targetPort: 80
                   port: 80
