--- a/voting-app-pod.yml
+++ b/voting-app-pod.yml
@@ -1,8 +1,8 @@
 apiVersion: v1
-type: Pod
+kind: Pod
 metadata:
         name: voting-app-pod
-        lables:
+        labels:
                 name: voting-app-pod
                 app: testing-k8s-vote-app
 
