--- a/voting-app-service.yml
+++ b/voting-app-service.yml
@@ -1,8 +1,8 @@
 apiVersion: v1
-type: Service
+kind: Service
 metadata:
         name: voting-app-service
-        lables:
+        labels:
                 app: testing-k8s-vote-app
 
 spec:
