--- a/redis-service.yml
+++ b/redis-service.yml
@@ -1,19 +1,17 @@
 apiVersion: v1
 kind: Service
-metadata:
-        name: redis
-        labels:
-                name: redis-service
-                app: testing-k8s-vote-app
+metadata: 
+  labels: 
+    app: testing-k8s-vote-app
+    name: redis-service
+  name: redis
+spec: 
+  ports: 
+    - 
+      port: 6379
+      targetPort: 6379
+  selector: 
+    app: testing-k8s-vote-app
+    name: redis-pod
+  type: ClusterIP
 
-spec:
-        type: ClusterIP
-        ports:
-                - targetPort: 6379
-                  port: 6379
-        selector:
-                name: redis-pod
-                app: testing-k8s-vote-app
-
-
-                  
