--- a/voting-app-service.yml
+++ b/voting-app-service.yml
@@ -1,17 +1,16 @@
 apiVersion: v1
 kind: Service
-metadata:
-        name: voting-app-service
-        labels:
-                app: testing-k8s-vote-app
+metadata: 
+  labels: 
+    app: testing-k8s-vote-app
+  name: voting-app-service
+spec: 
+  ports: 
+    - 
+      port: 80
+      targetPort: 80
+  selector: 
+    app: testing-k8s-vote-app
+    name: voting-app-pod
+  type: LoadBalancer
 
-spec:
-        type: LoadBalancer
-        ports:
-                - targetPort: 80
-                  port: 80
-        selector:
-                name: voting-app-pod
-                app: testing-k8s-vote-app
-
-                  
