--- a/voting-app-service.yml
+++ b/voting-app-service.yml
@@ -9,8 +9,9 @@ spec:
     - 
       port: 80
       targetPort: 80
+      nodePort: 30010
   selector: 
     app: testing-k8s-vote-app
     name: voting-app-pod
-  type: LoadBalancer
+  type: NodePort
 
