--- a/worker-app-deployment.yml
+++ b/worker-app-deployment.yml
@@ -14,10 +14,11 @@ spec:
     spec: 
       containers: 
         - 
-          image: dockersamples/examplevotingapp_worker
+          image: dockersamples/worker
           name: worker-app-container
   replicas: 1
   selector:
-    app: testing-k8s-vote-app
-    name: wroker-app-pod
+    matchLabels:
+      app: testing-k8s-vote-app
+      name: worker-app-pod
 
