--- a/voting-app-deployment.yml
+++ b/voting-app-deployment.yml
@@ -22,6 +22,7 @@ spec:
 
   replicas: 1
   selector:
-    app: testing-k8s-vote-app
-    name: voting-app-pod
+    matchLabels:
+      app: testing-k8s-vote-app
+      name: voting-app-pod
 
